Updates the list of signed-in profiles in user manager on ProfileAuthInfoChanged

BUG=627072

Review-Url: https://codereview.chromium.org/2163173004
Cr-Commit-Position: refs/heads/master@{#406983}

Former-commit-id: 5f986e03557bc540c8fb526b4aafb28c8c5a05fe